# GEL

./: Cargo.toml  README.md
src/: console.rs  datatypes.rs  grammar_generator.rs  main.rs  unused_code.txt
src/interpreter/: builtin_functions.rs  builtin_variables.rs  interpreter.rs  mod.rs  operators.rs  unwrap_values.rs
src/optimizers/: ast_optimizer.rs  mod.rs
src/parser/: linearize_ast.rs  mod.rs  parser.rs  parser_setup.rs
src/scanner/: mod.rs  scanner.rs  token_actions.rs
test_files/: Hello World.gel  TestProgram.gel  magic.gel  randomtest.gel  test.gel  test2.gel  test3.gel  unittest1.gel  unittest2.gel
