[package]
name = "gel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
macroquad = "0.4.2"
rust_decimal = { version = "1.32.0", features = ["maths"] }
rust_decimal_macros = "1.32.0"
futures = "0.3"
derivative = "2.2.0"